--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap');
+
 *{
+    font-family: 'Poppins', sans-serif;
     padding: 0;
     margin: 0;
 }
@@ -36,4 +39,30 @@ nav img{
     width: 120px;
     position: relative;
     z-index: 10;
+}
+
+.hero {
+    font-family: "Martel Sans", sans-serif;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: rgb(245, 242, 242);
+    font-size: large;
+    position: relative;
+    gap: 15px;
+}
+
+.hero :first-child{
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+}
+
+.hero :nth-child(2){
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    max-width: 600px;
 }
